--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,9 @@ matrix:
         - mkdir -p build
         - composer install
         - vendor/bin/robo build
-        - if [[ "$TRAVIS_TAG" ]]; then docker run --rm -v `pwd`:/build -w /build debian:9 bash -c "apt-get update && apt-get install -y ant git php && ant dependencies-init -f vendor/appserver-io-dist/debian/build.xml && ant local-build -Dbuild.number=$BUILD_NUMBER -Dtarget-os.major.version=9 -Dtarget-os.minor.version=9 -f vendor/appserver-io-dist/debian/build.xml && chmod -R 777 vendor/appserver-io-dist/debian/build"; fi
-        - if [[ "$TRAVIS_TAG" ]]; then mv vendor/appserver-io-dist/debian/build/* build/; fi
-        - if [[ "$TRAVIS_TAG" ]]; then echo "Prepared the following artefacts:"; ls -lh build/; fi
+        - docker run --rm -v `pwd`:/build -w /build debian:9 bash -c "apt-get update && apt-get install -y ant git php && ant dependencies-init -f vendor/appserver-io-dist/debian/build.xml && ant local-build -Dbuild.number=$BUILD_NUMBER -Dtarget-os.major.version=9 -Dtarget-os.minor.version=9 -f vendor/appserver-io-dist/debian/build.xml && chmod -R 777 vendor/appserver-io-dist/debian/build"
+        - mv vendor/appserver-io-dist/debian/build/* build/
+        - echo "Prepared the following artefacts:"; ls -lh build/
     - os: linux
       dist: xenial
       language: php
@@ -47,9 +47,5 @@ deploy:
   file: "build/*"
   skip_cleanup: true
   on:
-    branch: '1.1'
-    repo: appserver-io/appserver
-
-notifications:
-  email: info@appserver.io
-  webhooks: https://app.fossa.io/hooks/travisci
+    branch: 'travis-build'
+    repo: wick-ed/appserver
