--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ matrix:
       env:
         - OS_FAMILY = linux
         - OS_DISTRO = debian
+        - OS_VERSION = 9
       services:
         - docker
       script:
@@ -32,11 +33,28 @@ matrix:
         - if [[ "$TRAVIS_TAG" ]]; then mv vendor/appserver-io-dist/debian/build/* build/; fi
         - if [[ "$TRAVIS_TAG" ]]; then echo "Prepared the following artefacts:"; ls -lh build/; fi
     - os: linux
+      dist: bionic
+      php: 5.6
+      env:
+        - OS_FAMILY = linux
+        - OS_DISTRO = debian
+        - OS_VERSION = 10
+      services:
+        - docker
+      script:
+        - mkdir -p build
+        - composer install
+        - vendor/bin/robo build
+        - docker run --rm -v `pwd`:/build -w /build debian:10 bash -c "apt-get update && apt-get install -y ant git php && ant dependencies-init -f vendor/appserver-io-dist/debian/build.xml && ant local-build -Dbuild.number=$BUILD_NUMBER -Dtarget-os.major.version=10 -Dtarget-os.minor.version=2 -f vendor/appserver-io-dist/debian/build.xml && chmod -R 777 vendor/appserver-io-dist/debian/build"
+        - mv vendor/appserver-io-dist/debian/build/* build/
+        - echo "Prepared the following artefacts:"; ls -lh build/
+    - os: linux
       dist: xenial
       language: php
       php: 7.0
   allow_failures:
     - php: 7.0
+    - dist: bionic
     - os: osx
 
 deploy:
